--- a/views/listings/edit.ejs
+++ b/views/listings/edit.ejs
@@ -7,16 +7,17 @@
 </head>
 <body>
     <h3>Edit Your Listing</h3>
-    <form>
+    <form method="POST" action="/listings/<%= listing._id%>?_method=PUT">
         <input name="listing[title]" value="<%=listing.title%>" type="text">
         <br> <br>
-        <textarea name="listing[description]" value="<%=listing.title%>"></textarea>
+        <textarea name="listing[description]"> <%=listing.description%> </textarea>
         <br> <br>
-        <input name="listing[image]" value="<%= listing.image%>" type="text">
+        <input name="listing[image]" value="<%= listing.images%>" type="text">
         <br> <br>
         <input name="listing[price]" value="<%= listing.price%>" type="number">
         <br> <br>
         <input name="listing[country]" value="<%= listing.country%>" type="text">
+        <br> <br>
         <input name="listing[location]" value="<%= listing.location%>" type="text">
         <br> <br>
         <button>Edit</button>
