--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,9 @@
-/* body{
-    background-color: pink;
-} */
+body{
+     font-family: "Plus Jakarta Sans", sans-serif !important;
+     display: flex;
+     flex-direction: column;
+     min-height: 100vh;
+}
 
 /* navbar */
 .navbar{
@@ -39,4 +42,45 @@
     flex-wrap: wrap;
     justify-content: center;
     align-content: space-evenly;
+}
+
+/* Cards */
+.card{
+    border: none !important;
+    margin-bottom: 2rem;
+}
+
+.card-img-top{
+    border-radius: 1rem !important;
+    width: 100% !important;
+    object-fit: cover !important;
+}
+
+.card-body{
+    padding: 0 !important;
+}
+
+.card-text p{
+    font-weight: 400 !important;
+}
+
+.listing-link{
+    text-decoration: none;
+}
+
+/* Card Effect */
+.card-img-overlay{
+    opacity: 0;
+}
+.card-img-overlay:hover{
+    opacity: 0.2;
+    background-color: white;
+}
+.container{
+    flex:1;
+}
+/* New Page */
+.add-btn{
+    background-color: #fe424d !important;
+    border: none !important;
 }
