--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -7,7 +7,7 @@
 </head>
 <body>
     <% layout("/layouts/boilerplate")%>
-    <div class="row">
+    <div class="row mt-3">
         <div class="col-8 offset-2">
             <br><br>
          <h3>Create a New Listing</h3>
@@ -38,8 +38,7 @@
             <label for="location" class="form-label">Location</label>
             <input name="listing[location]" placeholder="Jaipur,Rajasthan" type="text" class="form-control">
         </div>
-        <br> <br>
-        <button class="btn btn-dark add-btn">Add</button>
+        <button class="btn btn-dark add-btn mt-3">Add</button>
     </form>
     </div>
     </div>
