--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -1,17 +1,39 @@
 <% layout("/layouts/boilerplate") %>
-<body>
+
+<div class="row mt-3">
+  <div class="col-8 offset-3">
     <h3>Listing Details:</h3>
-    <ul>
-        <li><%=listing.title%></li>
-        <li><%=listing.description%></li>
-        <li> &#8377;<%=listing.price.toLocaleString("en-IN")%></li>
-        <li><%=listing.location%></li>
-        <li><%=listing.country%></li>
-    </ul>
-    <br>
-    <a href="/listings/<%= listing._id %>/edit">Edit this Listing</a>
-    <br> <br>
-    <form method="POST" action="/listings/<%=listing._id%>?_method=DELETE">
-        <button>Delete this listing</button>
+  </div>
+
+  <div class="card col-6 offset-3 show-card">
+    <% 
+      let imgSrc = '/images/placeholder.jpg';
+      if (listing.image) {
+        if (typeof listing.image === 'string' && listing.image.trim() !== '') {
+          imgSrc = listing.image;
+        } else if (typeof listing.image === 'object' && listing.image.url && listing.image.url.trim() !== '') {
+          imgSrc = listing.image.url;
+        }
+      }
+    %>
+
+    <img src="<%= imgSrc %>" class="card-img-top show-img" alt="listing_image" style="object-fit:cover; height:20rem;">
+    <div class="card-body">
+      <p class="card-text">
+        <b><%= listing.title %></b><br>
+        <%= listing.description %><br>
+        &#8377; <%= listing.price ? Number(listing.price).toLocaleString("en-IN") : "N/A" %> / night
+        <div><%= listing.location %></div>
+        <div><%= listing.country %></div>
+      </p>
+    </div>
+  </div>
+
+  <br>
+  <div class="btns mt-3">
+    <a href="/listings/<%= listing._id %>/edit" class="btn btn-dark edit-btn">Edit</a>
+    <form method="POST" action="/listings/<%= listing._id %>?_method=DELETE" style="display:inline-block;">
+      <button type="submit" class="btn btn-dark ms-2">Delete</button>
     </form>
-</body>
+  </div>
+</div>
