--- a/views/listings/edit.ejs
+++ b/views/listings/edit.ejs
@@ -23,7 +23,7 @@
         </div>
         <div class="mb-3">
             <label for="image" class="form-label">Image Link</label>
-            <input name="listing[image][url]" value="<%= listing.image.url %>" type="text" class="form-control" >
+            <input name="listing[image]" value="<%= listing.image.url %>" type="text" class="form-control" >
             <div class="invalid-feedback">please enter valid link for image</div>
         </div>
         <div class="row">
