--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -2,7 +2,7 @@
 
 <div class="row mt-3">
   <div class="col-8 offset-3">
-    <h3>Listing Details:</h3>
+    <h3><%= listing.title %></h3>
   </div>
 
   <div class="card col-6 offset-3 show-card">
@@ -20,7 +20,6 @@
     <img src="<%= imgSrc %>" class="card-img-top show-img" alt="listing_image" style="object-fit:cover; height:20rem;">
     <div class="card-body">
       <p class="card-text">
-        <b><%= listing.title %></b><br>
         <%= listing.description %><br>
         &#8377; <%= listing.price ? Number(listing.price).toLocaleString("en-IN") : "N/A" %> / night
         <div><%= listing.location %></div>
@@ -34,6 +33,21 @@
     <a href="/listings/<%= listing._id %>/edit" class="btn btn-dark edit-btn">Edit</a>
     <form method="POST" action="/listings/<%= listing._id %>?_method=DELETE" style="display:inline-block;">
       <button type="submit" class="btn btn-dark ms-2">Delete</button>
+    </form>
+  </div>
+  <div class="col-8 offset-3">
+    <hr>
+    <h4>Leave a Review</h4>
+    <form action="/listings/<%=listing.id%>/review" method="post">
+      <div class="mb-3 mt-3 mb-3">
+        <label for="rating" class="form-label">Rating</label>
+        <input type="range" min="1" max="5" id="rating" name="review[rating]" class="form-range">
+      </div>
+      <div class="mb-3 mt-3">
+        <label for="comment" class="form-label">Comments</label>
+        <textarea name="review[comment]" id="comment" cols="30" rows="5" class="form-control"></textarea>
+      </div>
+      <button class="btn btn-outline-dark">Submit</button>
     </form>
   </div>
 </div>
