--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -8,7 +8,7 @@
 <div class="row row-cols-lg-4 row-cols-md-3 row-cols-sm-1">
   <% for(let listing of allListings) { %>
     <a href="/listings/<%=listing._id%>" class="listing-link">
-      <div class="card col">
+      <div class="card col listing-card">
      <!-- <div class="col-md-3 mb-4">
       <div class="card h-100"> -->
   <img src="<%=listing.image.url%>" class="card-img-top" alt="listing_image" style="height: 20rem;"/>
