--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -5,7 +5,7 @@
     <h3><%= listing.title %></h3>
   </div>
 
-  <div class="card col-6 offset-3 show-card">
+  <div class="card col-6 offset-3 show-card listing-card">
     <% 
       let imgSrc = '/images/placeholder.jpg';
       if (listing.image) {
@@ -50,5 +50,19 @@
       </div>
       <button class="btn btn-outline-dark">Submit</button>
     </form>
+
+    <hr>
+    <p><b>All Reviews</b></p>
+    <div class="row">
+    <% for( let review of listing.reviews) {%>
+      <div class="card col-5 ms-3 mb-3">
+        <div class="card-body">
+           <h5 class="card-title">John Doe</h5>
+           <p class="card-text"><%=review.comment%></p>
+           <p class="card-text"><%=review.rating%>stars</p>
+      </div>
+      </div>
+    <% } %>
+    </ul>
   </div>
 </div>
