--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -61,6 +61,9 @@
            <p class="card-text"><%=review.comment%></p>
            <p class="card-text"><%=review.rating%>stars</p>
       </div>
+      <form class="mb-3">
+        <button class="btn btn-sm btn-dark">Delete</button>
+      </form>
       </div>
     <% } %>
     </ul>
