--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -35,10 +35,13 @@
       <button type="submit" class="btn btn-dark ms-2">Delete</button>
     </form>
   </div>
+
   <div class="col-8 offset-3">
     <hr>
     <h4>Leave a Review</h4>
-    <form action="/listings/<%=listing.id%>/review" method="post" novalidate class="needs-validation">
+
+    
+    <form action="/listings/<%= listing._id %>/reviews" method="POST" novalidate class="needs-validation">
       <div class="mb-3 mt-3 mb-3">
         <label for="rating" class="form-label">Rating</label>
         <input type="range" min="1" max="5" id="rating" name="review[rating]" class="form-range">
@@ -53,19 +56,23 @@
 
     <hr>
     <p><b>All Reviews</b></p>
+
     <div class="row">
-    <% for( let review of listing.reviews) {%>
-      <div class="card col-5 ms-3 mb-3">
-        <div class="card-body">
-           <h5 class="card-title">John Doe</h5>
-           <p class="card-text"><%=review.comment%></p>
-           <p class="card-text"><%=review.rating%>stars</p>
-      </div>
-      <form class="mb-3" method="POST" action="/listings/<%= listing._id %>/reviews/<%=review._id %>?_method=DELETE">
-        <button class="btn btn-sm btn-dark">Delete</button>
-      </form>
-      </div>
-    <% } %>
-    </ul>
+      <% for (let review of listing.reviews) { %>
+        <div class="card col-5 ms-3 mb-3">
+          <div class="card-body">
+            <h5 class="card-title">John Doe</h5>
+            <p class="card-text"><%= review.comment %></p>
+            <p class="card-text"><%= review.rating %> stars</p>
+          </div>
+
+          
+          <form class="mb-3" method="POST" action="/listings/<%= listing._id %>/reviews/<%= review._id %>?_method=DELETE">
+            <button class="btn btn-sm btn-dark">Delete</button>
+          </form>
+        </div>
+      <% } %>
+    </div>
+
   </div>
 </div>
