--- a/views/includes/flash.ejs
+++ b/views/includes/flash.ejs
@@ -1,13 +1,13 @@
 <% if (success && success.length ) { %>
-<div class="alert alert-success alert-dismissible fade show col-6 offset-3" role="alert">
+<div class="alert alert-success alert-dismissible fade show col-6 offset-3 mt-3" role="alert" style="white-space: normal;">
     <%= success %>
     <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
 </div>
-<%} %>
+<% } %>
 
 <% if (error && error.length ) { %>
-<div class="alert alert-danger alert-dismissible fade show col-6 offset-3" role="alert">
-    <%= success %>
+<div class="alert alert-danger alert-dismissible fade show col-6 offset-3 mt-3" role="alert" style="white-space: normal;">
+    <%= error %>
     <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
 </div>
-<%} %>
+<% } %>
