--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -28,6 +28,7 @@
     </div>
   </div>
 
+  <% if(currUser && listing.owner._id.equals(currUser._id)) {%>
   <br>
   <div class="col-8 offset-3">
     <a href="/listings/<%= listing._id %>/edit" class="btn btn-dark edit-btn">Edit</a>
@@ -35,10 +36,11 @@
       <button type="submit" class="btn btn-dark ms-2">Delete</button>
     </form>
   </div>
-
-
+  <% } %>
+  
   <div class="col-8 offset-3">
-    <hr>
+    <hr />
+    <% if(currUser) {%>
     <h4>Leave a Review</h4>
 
     <form action="/listings/<%= listing._id %>/reviews" method="POST" novalidate class="needs-validation">
@@ -53,15 +55,17 @@
       </div>
       <button class="btn btn-outline-dark">Submit</button>
     </form>
-
     <hr>
+    <% } %>
+
+<div class="col-8 offset-3 mt-3"></div>
     <p><b>All Reviews</b></p>
 
     <div class="row">
       <% for (let review of listing.reviews) { %>
         <div class="card col-5 ms-3 mb-3">
           <div class="card-body">
-            <h5 class="card-title">John Doe</h5>
+            <h5 class="card-title">@<%= review.author.username %></h5>
             <p class="card-text"><%= review.comment %></p>
             <p class="card-text"><%= review.rating %> stars</p>
           </div>
@@ -73,6 +77,5 @@
         </div>
       <% } %>
     </div>
-
-  </div>
+</div>
 </div>
