--- a/views/listings/edit.ejs
+++ b/views/listings/edit.ejs
@@ -10,7 +10,11 @@
     <div class="row mt-3">
         <div class="col-8 offset-2">
     <h3>Edit Your Listing</h3>
-    <form method="POST" action="/listings/<%= listing._id%>?_method=PUT" novalidate class="needs-validation">
+    <form 
+       method="POST"
+       action="/listings/<%= listing._id%>?_method=PUT" 
+       novalidate class="needs-validation" 
+       enctype="multipart/form-data">
         <div class="mb-3">
             <label for="title" class="form-label">Title</label>
             <input name="listing[title]" value="<%=listing.title%>" type="text" class="form-control" required>
@@ -22,12 +26,14 @@
             <div class="invalid-feedback">please enter the short description</div>
         </div>
         <div class="mb-3">
-            <label for="image" class="form-label">Image Link</label>
-            <input name="listing[image][url]" 
-       value="<%= listing.image && listing.image.url ? listing.image.url : '' %>" 
-       type="text" 
-       class="form-control">
-            <div class="invalid-feedback">please enter valid link for image</div>
+            Orignal Listing Image <br>
+            <img src="<%= listing.image.url %>" />
+        </div>
+        <div class="mb-3">
+            <label for="image" class="form-label">upload New Image</label>
+            <input name="image" 
+            type="file" 
+            class="form-control">
         </div>
         <div class="row">
             <div class="mb-3 col-md-4">
@@ -35,6 +41,7 @@
             <input name="listing[price]" value="<%= listing.price%>" type="number" class="form-control" required>
              <div class="invalid-feedback">price should be valid</div>
         </div>
+        
         <div class="mb-3 col-md-8">
             <label for="country" class="form-label">Country</label>
             <input name="listing[country]" value="<%= listing.country%>" type="text" class="form-control" required>
@@ -43,7 +50,8 @@
         </div>
         <div class="mb-3">
             <label for="Location" class="form-label">Location</label>
-            <input name="listing[location]" value="<%= listing.location%>" type="text" required>
+            <input name="image" type="file">
+            <!-- <input name="listing[location]" value="<%= listing.location%>" type="text" required> -->
             <div class="invalid-feedback">location should be valid</div>
         </div>
         <button class="btn btn-dark edit-btn mt-3">Edit</button>
